Big refactor to make unit mission proccesing and registration easier to unit test