@@ -9,10 +9,8 @@ import com.kevinguanchedarias.owgejava.pojo.SystemMessageUser;
 import com.kevinguanchedarias.owgejava.repository.SystemMessageRepository;
 import com.kevinguanchedarias.owgejava.repository.UserReadSystemMessageRepository;
 import com.kevinguanchedarias.owgejava.util.EntityUtil;
-import com.kevinguanchedarias.owgejava.util.TransactionUtil;
-import com.kevinguanchedarias.taggablecache.manager.TaggableCacheManager;
+import lombok.AllArgsConstructor;
 import org.springframework.beans.BeanUtils;
-import org.springframework.beans.factory.annotation.Autowired;
 import org.springframework.data.domain.Sort;
 import org.springframework.data.domain.Sort.Direction;
 import org.springframework.data.jpa.repository.JpaRepository;
@@ -21,7 +19,8 @@ import org.springframework.stereotype.Service;
 import org.springframework.transaction.annotation.Transactional;
 
 import java.io.Serial;
-import java.util.Date;
+import java.time.LocalDateTime;
+import java.time.ZoneOffset;
 import java.util.List;
 import java.util.stream.Collectors;
 
@@ -30,41 +29,30 @@ import java.util.stream.Collectors;
  * @since 0.9.16
  */
 @Service
+@AllArgsConstructor
 public class SystemMessageBo implements BaseBo<Integer, SystemMessage, SystemMessageDto> {
-    public static final String SYSTEM_MESSAGE_CACHE_TAG = "system_message";
+    public static final String SYSTEM_MESSAGE_CHANGE = "system_message_change";
 
     @Serial
     private static final long serialVersionUID = 2748430747376904932L;
 
-    @Autowired
-    private transient SystemMessageRepository repository;
-
-    @Autowired
-    private transient TransactionUtilService transactionUtilService;
-
-    @Autowired
-    private transient SocketIoService socketIoService;
-
-    @Autowired
-    private UserStorageBo userStorageBo;
-
-    @Autowired
-    private transient UserReadSystemMessageRepository userReadRepository;
-
-    @Autowired
-    private transient TaggableCacheManager taggableCacheManager;
+    private final transient SystemMessageRepository repository;
+    private final transient TransactionUtilService transactionUtilService;
+    private final transient SocketIoService socketIoService;
+    private final UserStorageBo userStorageBo;
+    private final transient UserReadSystemMessageRepository userReadRepository;
 
     /**
      * @author Kevin Guanche Darias <kevin@kevinguanchedarias.com>
      * @since 0.9.16
      */
     @Scheduled(cron = "0 0 1 * * *")
-    public void deleteOldSystemMessages() {
+    public void deleteOld() {
         transactionUtilService.runWithRequired(() -> {
-            List<SystemMessage> forDeleteMessages = repository
-                    .findByCreationDateLessThan(new Date(new Date().getTime() - (86400 * 1000 * 7)));
+            var forDeleteMessages = repository
+                    .findByCreationDateLessThan(LocalDateTime.now(ZoneOffset.UTC).minusDays(7));
             if (!forDeleteMessages.isEmpty()) {
-                forDeleteMessages.forEach(this::delete);
+                repository.deleteAll(forDeleteMessages);
             }
         });
     }
@@ -77,17 +65,15 @@ public class SystemMessageBo implements BaseBo<Integer, SystemMessage, SystemMes
     @Override
     @Transactional
     public SystemMessage save(SystemMessageDto systemMessageDto) {
-        SystemMessage systemMessage = new SystemMessage();
+        var systemMessage = new SystemMessage();
         BeanUtils.copyProperties(systemMessageDto, systemMessage);
         EntityUtil.requireNullId(systemMessage);
-        systemMessage = save(systemMessage);
-        TransactionUtil.doAfterCommit(this::emitChange);
+        systemMessage = repository.save(systemMessage);
+        transactionUtilService.doAfterCommit(this::emitChange);
         return systemMessage;
     }
 
     /**
-     * @param userId
-     * @return
      * @author Kevin Guanche Darias <kevin@kevinguanchedarias.com>
      * @since 0.9.16
      */
@@ -96,34 +82,15 @@ public class SystemMessageBo implements BaseBo<Integer, SystemMessage, SystemMes
                 .collect(Collectors.toList());
     }
 
-    /**
-     * Translates the specified system message to one object with the isRead
-     * property defined
-     *
-     * @param message
-     * @param userId
-     * @return
-     * @author Kevin Guanche Darias <kevin@kevinguanchedarias.com>
-     * @since 0.9.16
-     */
-    public SystemMessageUser translateToUser(SystemMessage message, int userId) {
-        SystemMessageUser systemMessageUser = new SystemMessageUser();
-        systemMessageUser.setId(message.getId());
-        systemMessageUser.setContent(message.getContent());
-        systemMessageUser.setCreationDate(message.getCreationDate());
-        systemMessageUser.setIsRead(userReadRepository.existsByMessageIdAndUserId(message.getId(), userId));
-        return systemMessageUser;
-    }
-
     @Transactional
     public void markAsRead(List<Integer> messages, UserStorage user) {
         repository.findAllById(messages).forEach(message -> {
-            UserReadSystemMessage userRead = new UserReadSystemMessage();
+            var userRead = new UserReadSystemMessage();
             userRead.setMessage(message);
             userRead.setUser(user);
             userReadRepository.save(userRead);
         });
-        TransactionUtil.doAfterCommit(() -> emitChangeToUser(user.getId()));
+        transactionUtilService.doAfterCommit(() -> emitChangeToUser(user.getId()));
     }
 
     @Override
@@ -136,19 +103,8 @@ public class SystemMessageBo implements BaseBo<Integer, SystemMessage, SystemMes
         return repository;
     }
 
-    @Override
-    public TaggableCacheManager getTaggableCacheManager() {
-        return taggableCacheManager;
-    }
-
-    @Override
-    public String getCacheTag() {
-        return SYSTEM_MESSAGE_CACHE_TAG;
-    }
-
     private void emitChange() {
-        List<SystemMessage> messages = findAll();
-        userStorageBo.findAllIds().forEach(userId -> emitChangeToUser(messages, userId));
+        userStorageBo.findAllIds().forEach(this::emitChangeToUser);
     }
 
     private void emitChangeToUser(int userId) {
@@ -156,7 +112,23 @@ public class SystemMessageBo implements BaseBo<Integer, SystemMessage, SystemMes
     }
 
     private void emitChangeToUser(List<SystemMessage> messages, int userId) {
-        socketIoService.sendMessage(userId, "system_message_change",
-                () -> messages.stream().map(message -> translateToUser(message, userId)).collect(Collectors.toList()));
+        socketIoService.sendMessage(userId, SYSTEM_MESSAGE_CHANGE,
+                () -> messages.stream().map(message -> translateToUser(message, userId)).toList());
+    }
+
+    /**
+     * Translates the specified system message to one object with the isRead
+     * property defined
+     *
+     * @author Kevin Guanche Darias <kevin@kevinguanchedarias.com>
+     * @since 0.9.16
+     */
+    private SystemMessageUser translateToUser(SystemMessage message, int userId) {
+        var systemMessageUser = new SystemMessageUser();
+        systemMessageUser.setId(message.getId());
+        systemMessageUser.setContent(message.getContent());
+        systemMessageUser.setCreationDate(message.getCreationDate());
+        systemMessageUser.setRead(userReadRepository.existsByMessageIdAndUserId(message.getId(), userId));
+        return systemMessageUser;
     }
 }
